<resources>
    <string name="app_name">crecheApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sing_up_activity">SingUpActivity</string>
    <string name="txt_login">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_sucess">Sucesso</string>
    <string name="email_example">josefilho@gmail.com</string>
    <string name="txt_password">Senha</string>
    <string name="password_example">*******</string>
    <string name="btn_txt_continuar">Continuar</string>
    <string name="btn_txt_sign_up">Cadastrar</string>
    <string name="txt_cadastro_login">Não é cadastrado? Crie sua conta</string>
    <string name="txt_cadastro">Cadastro</string>
    <string name="btn_cadastro_pai">Cadastro de Responsável</string>
    <string name="btn_cadastro_creche">Cadastro de Creche</string>
    <string name="txt_back_to_login">Já é cadastrado? \n Clique aqui para fazer login</string>
    <string name="ellipsis">•</string>
    <string name="arrow_button">arrow_button</string>
    <string name="cadastro_de_responsavel">Cadastro de Responsável</string>
    <string name="cadastro_de_creche">Cadastro de Creche</string>
    <string name="credenciais">Credenciais</string>
    <string name="confirm_password">Confirme a Senha</string>
    <string name="info_basicas">Informações Básicas</string>
    <string name="nome_responsavel">Nome do(a) Responsável</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="contato">Contato</string>
    <string name="cpf">CPF</string>
    <string name="limite_caractere">Máximo de 300 caracteres</string>
    <string name="endereco">Endereço</string>
    <string name="rua">Rua</string>
    <string name="cep_hint">xxx.xxx-xx</string>
    <string name="cep_field">CEP</string>
    <string name="detalhes_endereco">Ap 212</string>
    <string name="complemento">Complemento</string>
    <string name="bairro_hint">Boa Viagem</string>
    <string name="bairro_field">Bairro</string>
    <string name="estado_hint">Pernambuco</string>
    <string name="cidade_field">Cidade</string>
    <string name="estado_field">Estado</string>
    <string name="cidade_hint">Recife</string>
    <string name="rua_hint">Rua Arco Íris, 231</string>
    <string name="genero">Gênero</string>
    <string name="cadastro_de_crianca">Cadastro de Criança</string>
    <string name="genero_feminino">Feminino</string>
    <string name="genero_masculino">Masculino</string>
    <string name="outros_generos">Outros</string>
    <string name="date_hint">dd/mm/aaaa</string>
    <string name="informacoes_crianca">Informações da Criança</string>
    <string name="perfil">Perfil</string>
    <string name="notification_icon">View notifications</string>
    <string name="success_image">Success image</string>
    <string name="nome_filho">Nome do filho(a)</string>
    <string name="idade_filho">Idade do filho(a)</string>
    <string name="creche_atual">Creche atual</string>
    <string name="sair">Sair</string>
    <string name="endereco_hint">Inserir endereço</string>
    <string name="conversas">Conversas</string>
    <string name="creche_ex">Creche Saber e Viver</string>
    <string name="hora_ex">15:00</string>
    <string name="txt_ex">Tudo bem, vamos deixar as coisas dele prontas!</string>
    <string name="welcome_tutorial_title">Bem-vindo ao Crescer</string>
    <string name="mae_tutorial_title">Mães-Crecheiras</string>
    <string name="creche_tutorial_title">Creches</string>
    <string name="location_tutorial_title">Legenda do Mapa</string>
    <string name="welcome_tutorial_description">Com o Crescer, você pode\n encontrar o serviço mais\n adequado para seu pequeno</string>
    <string name="mae_tutorial_description">Encontre Mães-Crecheiras\n especializadas próximas a você\n para auxiliar nos cuidados da\n criança</string>
    <string name="creche_tutorial_description">Busque creches com\n caraterísticas específicas como\n atividades, linguagens, estrutura\n e rotina de cuidados de sua\n preferência</string>
    <string name="location_tutorial_description">Identifique os serviços no mapa através dos ícones</string>
    <string name="acompanhamento">Acompanhamento</string>
    <string name="ex_dia_e_data">Segunda-feira, 17/04/2023</string>
    <string name="ex_alimento_1">9:30 - Banana amassada com leite</string>
    <string name="ex_alimento_2">12:30 - Purê de batata, arroz e frango desfiado</string>
    <string name="ex_alimento_3">15:00 - Maçã cortada</string>
    <string name="ex_alimento_4">17:00 PM - Mamadeira</string>
</resources>