<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/conversation_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/random_logo"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/conversation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creche_ex"
        android:textSize="16sp"
        android:textColor="@color/login_txt_color"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/conversation_image"
        android:layout_alignTop="@id/conversation_image"/>

    <TextView
        android:id="@+id/conversation_time"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/conversation_name"
        android:layout_marginStart="277dp"
        android:layout_marginTop="-19dp"
        android:layout_toEndOf="@id/conversation_image"
        android:text="@string/hora_ex"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/conversation_last_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/conversation_time"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@id/conversation_image"
        android:text="@string/txt_ex"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />
</RelativeLayout>