<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/login_txt_color"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth="wrap_content"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintVertical_bias="0.1"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_image"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth="wrap_content"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintVertical_bias="0.2"
        android:gravity="center"
        android:contentDescription="logo" />

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textSize="20sp"
        android:textColor="@color/gray_login_screen"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_example"
        android:textAlignment="textStart"
        android:textColor="@color/gray_login_screen"
        android:textColorHint="@color/gray_login_screen"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_circle_background"
        android:paddingStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_txt"
        android:padding="8dp"
        android:autofillHints="0dp" />


    <TextView
        android:id="@+id/password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"
        android:textSize="20sp"
        android:textColor="@color/gray_login_screen"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_example"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text_circle_background"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_txt"
        android:gravity="start"
        android:padding="8dp"
        android:autofillHints="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_txt_continuar"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/btn_login_style"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:gravity="center"/>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray_login_screen"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cadastro_login"
        android:textSize="20sp"
        android:textColor="@color/gray_login_screen"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>