<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="484dp"
        android:background="@color/top_screen_bar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/img_back_button"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@color/top_screen_bar"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/arrow_image"
            app:layout_constraintStart_toStartOf="@id/cadastro_responsavel_txt"
            android:contentDescription="@string/arrow_button" />

        <TextView
            android:id="@+id/cadastro_responsavel_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="@string/cadastro_de_responsavel"
            android:textColor="@color/gray_login_screen"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_credenciais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:text="@string/credenciais"
        android:textColor="@color/login_txt_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/email_txt"
        app:layout_constraintStart_toStartOf="@id/email_txt"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="53dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="68dp"
        android:text="@string/txt_email"
        android:textColor="@color/gray_login_screen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/txt_credenciais" />

    <EditText
        android:id="@+id/email"
        android:layout_width="359dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="0dp"
        android:background="@drawable/edit_text_circle_background"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:paddingStart="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/gray_login_screen"
        android:textColorHint="@color/gray_login_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_txt" />

    <TextView
        android:id="@+id/password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="68dp"
        android:text="@string/txt_password"
        android:textColor="@color/gray_login_screen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/refill_password"
        app:layout_constraintStart_toStartOf="@id/fill_password"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/fill_password"
        android:layout_width="359dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="0dp"
        android:background="@drawable/edit_text_circle_background"
        android:hint="@string/password_example"
        android:inputType="textPassword"
        android:padding="8dp"
        android:paddingStart="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/gray_login_screen"
        android:textColorHint="@color/gray_login_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_txt" />

    <TextView
        android:id="@+id/confirm_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="68dp"
        android:text="@string/confirm_password"
        android:textColor="@color/gray_login_screen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/refill_password"
        app:layout_constraintStart_toStartOf="@id/refill_password"
        app:layout_constraintTop_toBottomOf="@id/fill_password" />

    <EditText
        android:id="@+id/refill_password"
        android:layout_width="359dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="0dp"
        android:background="@drawable/edit_text_circle_background"
        android:hint="@string/password_example"
        android:inputType="textPassword"
        android:padding="8dp"
        android:paddingStart="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/gray_login_screen"
        android:textColorHint="@color/gray_login_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_txt" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="143dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout">

        <TextView
            android:id="@+id/dot_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:text="@string/ellipsis"
            android:textColor="@color/ellipsis_button"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dot_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/ellipsis"
            android:textColor="@color/ellipsis_button"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dot_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/ellipsis"
            android:textColor="@color/ellipsis_button"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dot_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ellipsis"
            android:textColor="@color/button_login_color"
            android:textSize="24sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registrate"
        style="@style/btn_login_style"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/btn_txt_sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refill_password" />

</androidx.constraintlayout.widget.ConstraintLayout>