<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/top_screen_bar"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/img_back_button"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@color/top_screen_bar"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/arrow_image"
            android:contentDescription="@string/arrow_button" />

        <TextView
            android:id="@+id/cadastro_responsavel_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="70dp"
            android:text="@string/cadastro_de_responsavel"
            android:textColor="@color/gray_login_screen"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_info_basicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/info_basicas"
        android:textColor="@color/login_txt_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/nested_scroll_view"
        app:layout_constraintTop_toBottomOf="@id/top_tab_layout" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/ellipsis_button"
        app:layout_constraintTop_toBottomOf="@id/txt_info_basicas"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintBottom_toTopOf="@id/ellipseLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/nome_creche_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nome_responsavel"
                android:textColor="@color/gray_login_screen"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edt_name_parent"
                android:layout_width="359dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_circle_background"
                android:hint="José Farias Lima"
                android:textAlignment="textStart"
                android:paddingStart="20dp"
                android:inputType="text"
                android:textColor="@color/gray_login_screen"
                android:textColorHint="@color/gray_login_screen" />

            <TextView
                android:id="@+id/nome_responsavel_creche_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/data_nascimento"
                android:textColor="@color/gray_login_screen"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_birthday_parent"
                android:layout_width="359dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_circle_background"
                android:textAlignment="textStart"
                android:hint="@string/date_hint"
                android:paddingStart="15dp"
                android:textColor="@color/gray_login_screen"
                android:textColorHint="@color/gray_login_screen"
                android:inputType="date"/>

            <TextView
                android:id="@+id/contact_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/contato"
                android:textColor="@color/gray_login_screen"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_contact_parent"
                android:layout_width="359dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_circle_background"
                android:inputType="phone"
                android:digits="0123456789+"
                android:textAlignment="textStart"
                android:hint="(xx) xxxxx-xxxx"
                android:paddingStart="15dp"
                android:textColor="@color/gray_login_screen"
                android:textColorHint="@color/gray_login_screen" />

            <TextView
                android:id="@+id/cpf_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/cpf"
                android:textColor="@color/gray_login_screen"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edt_cpf_parent"
                android:layout_width="359dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_circle_background"
                android:inputType="text"
                android:digits="0123456789.-"
                android:textAlignment="textStart"
                android:hint="xxx.xxx.xxx-xx"
                android:paddingStart="15dp"
                android:textColor="@color/gray_login_screen"
                android:textColorHint="@color/gray_login_screen" />

            <TextView
                android:id="@+id/gender_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/genero"
                android:textColor="@color/gray_login_screen"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/gender_layout"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/gender_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/feminine_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/genero_feminino"
                    android:textSize="15sp"
                    android:textColor="@color/gray_login_screen"
                    android:checked="true"
                    android:buttonTint="@color/gender_radio_button" />

                <RadioButton
                    android:id="@+id/masculine_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15sp"
                    android:text="@string/genero_masculino"
                    android:textColor="@color/gray_login_screen"
                    android:buttonTint="@color/gender_radio_button" />

                <RadioButton
                    android:id="@+id/others_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15sp"
                    android:text="@string/outros_generos"
                    android:textColor="@color/gray_login_screen"
                    android:buttonTint="@color/gender_radio_button" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ellipseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/proceed_button"
        app:layout_constraintTop_toBottomOf="@id/nested_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ellipse_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/background_color"
            android:src="@drawable/icon_blue_ellipse" />

        <ImageButton
            android:id="@+id/ellipse_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/background_color"
            android:src="@drawable/icon_gray_ellipse" />

        <ImageButton
            android:id="@+id/ellipset_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/background_color"
            android:src="@drawable/icon_gray_ellipse" />

        <ImageButton
            android:id="@+id/dellipse_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/background_color"
            android:src="@drawable/icon_gray_ellipse" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/proceed_button"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:src="@drawable/icon_proceed_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>